# brainypi-ai-api-examples

./: CMakeLists.txt  README.md  openapi.yaml
cpp/: CMakeLists.txt  example_face_detection.cpp  example_face_registration.cpp  example_face_verification.cpp  example_image_classification.cpp  example_object_detection.cpp  example_pose_detection.cpp  helper.cpp  helper.hpp
